--- a/myapp/public/calculator.html
+++ b/myapp/public/calculator.html
@@ -7,14 +7,51 @@
 <span id="result"></span>
 </div>
 </body>
+<input type="number" name="n1" id="n1">
+<input type="number" name="n2" id="n2">
+<button onclick="addNums()">Add</button>
+<button onclick="subNums()">Subtract</button>
+<button onclick="mulNums()">Multiply</button>
+<button onclick="divNums()">Divide</button>
 <script>
-let num1 = 2;
-let num2 = 4;
+
+function addNums(){    
+let num1 = document.getElementById('n1').value;
+let num2 = document.getElementById('n2').value;
+
 fetch(`/calculator/add?num1=${num1}&num2=${num2}`)
 .then(response => response.json())
 .then(data => {
 document.getElementById("result").innerHTML =
 data.result;
 })
+}
+
+function subNums(){
+    let num1 = document.getElementById('n1').value;
+    let num2 = document.getElementById('n2').value;
+
+    fetch(`/calculator/subtract?num1=${num1}&num2=${num2}`)
+    .then(response => response.json())
+    .then(data => { document.getElementById("result").innerHTML = data.result;})
+}
+
+function mulNums(){
+    let num1 = document.getElementById('n1').value;
+    let num2 = document.getElementById('n2').value;
+
+    fetch(`/calculator/multiply?num1=${num1}&num2=${num2}`)
+    .then(response => response.json())
+    .then(data => { document.getElementById("result").innerHTML = data.result;})
+}
+
+function divNums(){
+    let num1 = document.getElementById('n1').value;
+    let num2 = document.getElementById('n2').value;
+
+    fetch(`/calculator/divide?num1=${num1}&num2=${num2}`)
+    .then(response => response.json())
+    .then(data => { document.getElementById("result").innerHTML = data.result;})
+}
 </script>
 </html>
